Fix(Bugs): búsqueda, eventos en cards, overflow en perfil y validaciones.

--- a/src/css/comunidadPage.css
+++ b/src/css/comunidadPage.css
@@ -439,8 +439,6 @@
   }
 
   .usuarios_container {
-    justify-content: center;
-
     .usuario_card {
       width: calc(25% - 15px);
     }
